--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- left column: heading + controls -->
         <div>
           <div class="hero">
-            <h2>We help <span style="color:#000">gooood businesses</span> become <span style="color:var(--accent-2)">GREAT.</span></h2>
+            <h2>We help <span style="color:#000">good businesses</span> become <span style="color:var(--accent-2)">GREAT.</span></h2>
             <p>Creative films, thumb-stopping reels, and campaigns built to grow revenue. We focus on measurable growth — views, leads and sales.</p>
           </div>
 
