--- a/index.html
+++ b/index.html
@@ -183,6 +183,13 @@
         <div class="feature-card"><img src="https://cdn-icons-png.flaticon.com/512/1828/1828462.png" width="48" alt=""><div style="font-weight:700; margin-top:10px">Live Event Coverage</div><p style="color:var(--muted); margin-top:8px">Highlights, ceremony films & recap reels.</p></div>
         <div class="feature-card"><img src="https://cdn-icons-png.flaticon.com/512/2922/2922835.png" width="48" alt=""><div style="font-weight:700; margin-top:10px">Distribution & Ads</div><p style="color:var(--muted); margin-top:8px">Paid media creative & optimisation.</p></div>
       </div>
+
+      <div class="container"><h2>Add‑ons</h2>
+<div class="grid cards-3">
+<div class="card"><h3>Brand Film</h3><p>1–3 min cinematic story for founders, products or events.</p></div>
+<div class="card"><h3>YouTube Edit</h3><p>Long-form edits, captions, chapters, and thumbnails.</p></div>
+<div class="card"><h3>Paid Campaigns</h3><p>Simple, local reach ads via Meta or LinkedIn to amplify results.</p></div>
+</div></div>
     </section>
 
     <!-- WORK pane -->
@@ -212,6 +219,7 @@
         <div class="stat-card"><div style="font-weight:700">Values</div><p style="color:var(--muted); margin-top:8px">Craft, speed, honesty, results.</p></div>
         <div class="stat-card"><div style="font-weight:700">Recognition</div><p style="color:var(--muted); margin-top:8px">Festival wins and client accolades.</p></div>
       </div>
+      
     </section>
 
     <!-- CONTACT pane -->
