--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="tabs" role="tablist" aria-label="Main navigation">
         <button class="tab-btn active" data-tab="home">Home</button>
         <button class="tab-btn" data-tab="services">Services</button>
-        <button class="tab-btn" data-tab="work">Work</button>
+        <button class="tab-btn" data-tab="portfolio">portfolio</button>
         <button class="tab-btn" data-tab="about">About</button>
         <button class="tab-btn" data-tab="contact">Contact</button>
       </div>
