--- a/index.html
+++ b/index.html
@@ -193,30 +193,192 @@
     </section>
 
     <!-- WORK pane -->
-    <section class="section"><div class="container grid portfolio-grid">
-<div class="thumb" style="height:220px; overflow:hidden; border-radius:14px;">
-  <iframe width="100%" height="220" src="https://www.youtube.com/embed/0Lj4ysomn0M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
-  </iframe>
-</div>
-<div class="thumb" style="height:220px; overflow:hidden; border-radius:14px;">
-  <iframe width="100%" height="220" src="https://www.youtube.com/embed/ouDX363DKFg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
-  </iframe>
-</div>
-<script async="" src="//www.instagram.com/embed.js"></script>
-<a class="thumb" href="https://www.youtube.com/watch?v=r8tRxU-wW5s&amp;ab_channel=DimlightCreations" target="_blank" style="height:220px;background:url('https://img.youtube.com/vi/r8tRxU-wW5s/maxresdefault.jpg') center/cover no-repeat">
-  <h4>Instant Breakfast ad film</h4>
-</a>
-<div class="thumb" style="height:220px; overflow:hidden; border-radius:14px;">
-  <iframe width="100%" height="220" src="https://www.youtube.com/embed/NSq2s2-yvFM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
-  </iframe>
-</div>
- <div class="thumb" style="height:220px; overflow:hidden; border-radius:14px;">
-  <iframe width="100%" height="220" src="https://www.youtube.com/embed/p_FVQvhmIzQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
-  </iframe>
-</div>
-<iframe width="100%" height="220" src="https://www.youtube.com/embed/vP71vc-ZdrI?modestbranding=1&amp;rel=0&amp;showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
-</iframe>
-</div></section>
+<section class="section">
+  <div class="container grid portfolio-grid" style="
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+    ">
+    <a class="thumb" href="https://www.youtube.com/watch?v=0Lj4ysomn0M" target="_blank" style="
+        height: 220px;
+        background: url('https://img.youtube.com/vi/0Lj4ysomn0M/maxresdefault.jpg')
+          center/cover no-repeat;
+        border-radius: 14px;
+        position: relative;
+        display: flex;
+        align-items: flex-end;
+        padding: 10px;
+        color: white;
+        text-decoration: none;
+        overflow: hidden;
+      ">
+      <div style="
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background: rgba(0, 0, 0, 0.3);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        ">
+        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+      </div>
+      <h4 style="z-index: 1;">On the way | Short Film | Madhu | Ram Sardhar</h4>
+    </a>
+
+    <a class="thumb" href="https://www.youtube.com/watch?v=ouDX363DKFg" target="_blank" style="
+        height: 220px;
+        background: url('https://img.youtube.com/vi/ouDX363DKFg/maxresdefault.jpg')
+          center/cover no-repeat;
+        border-radius: 14px;
+        position: relative;
+        display: flex;
+        align-items: flex-end;
+        padding: 10px;
+        color: white;
+        text-decoration: none;
+        overflow: hidden;
+      ">
+      <div style="
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background: rgba(0, 0, 0, 0.3);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        ">
+        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+      </div>
+      <h4 style="z-index: 1;">
+        In the race for trust, Ethika is always in pole position.
+        #DriveWithEthika F1XEthika
+      </h4>
+    </a>
+
+    <a class="thumb" href="https://www.youtube.com/watch?v=r8tRxU-wW5s" target="_blank" style="
+        height: 220px;
+        background: url('https://img.youtube.com/vi/r8tRxU-wW5s/maxresdefault.jpg')
+          center/cover no-repeat;
+        border-radius: 14px;
+        position: relative;
+        display: flex;
+        align-items: flex-end;
+        padding: 10px;
+        color: white;
+        text-decoration: none;
+        overflow: hidden;
+      ">
+      <div style="
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background: rgba(0, 0, 0, 0.3);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        ">
+        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+      </div>
+      <h4 style="z-index: 1;">Instant Millet Breakfast | AD film by Ram sardhar</h4>
+    </a>
+
+    <a class="thumb" href="https://www.youtube.com/watch?v=NSq2s2-yvFM" target="_blank" style="
+        height: 220px;
+        background: url('https://img.youtube.com/vi/NSq2s2-yvFM/maxresdefault.jpg')
+          center/cover no-repeat;
+        border-radius: 14px;
+        position: relative;
+        display: flex;
+        align-items: flex-end;
+        padding: 10px;
+        color: white;
+        text-decoration: none;
+        overflow: hidden;
+      ">
+      <div style="
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background: rgba(0, 0, 0, 0.3);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        ">
+        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+      </div>
+      <h4 style="z-index: 1;">
+        Employee Wellness Health Camp | SID’s Farm | Hyderabad
+      </h4>
+    </a>
+
+    <a class="thumb" href="https://www.youtube.com/watch?v=p_FVQvhmIzQ" target="_blank" style="
+        height: 220px;
+        background: url('https://img.youtube.com/vi/p_FVQvhmIzQ/maxresdefault.jpg')
+          center/cover no-repeat;
+        border-radius: 14px;
+        position: relative;
+        display: flex;
+        align-items: flex-end;
+        padding: 10px;
+        color: white;
+        text-decoration: none;
+        overflow: hidden;
+      ">
+      <div style="
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background: rgba(0, 0, 0, 0.3);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        ">
+        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+      </div>
+      <h4 style="z-index: 1;">BE IN THE MOMENT | Award winning Shortfilm | By Ram sardhaR</h4>
+    </a>
+
+    <a class="thumb" href="https://www.youtube.com/watch?v=vP71vc-ZdrI" target="_blank" style="
+        height: 220px;
+        background: url('https://img.youtube.com/vi/vP71vc-ZdrI/maxresdefault.jpg')
+          center/cover no-repeat;
+        border-radius: 14px;
+        position: relative;
+        display: flex;
+        align-items: flex-end;
+        padding: 10px;
+        color: white;
+        text-decoration: none;
+        overflow: hidden;
+      ">
+      <div style="
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background: rgba(0, 0, 0, 0.3);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        ">
+        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+      </div>
+      <h4 style="z-index: 1;">ANTHILL Official Trailer | Documentary Film | Susheel Agarwal</h4>
+    </a>
+  </div>
+</section>
     <section id="work-pane" class="tab-pane" aria-labelledby="work">
       <div class="center">
         <h3 class="section-heading">Selected Work</h3>
