--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <div class="tabs" role="tablist" aria-label="Main navigation">
         <button class="tab-btn active" data-tab="home">Home</button>
         <button class="tab-btn" data-tab="services">Services</button>
-        <button class="tab-btn" data-tab="portfolio">portfolio</button>
+        <button class="tab-btn" data-tab="portfolio">Portfolio</button>
+        <button class="tab-btn" data-tab="work">Work</button>
         <button class="tab-btn" data-tab="about">About</button>
         <button class="tab-btn" data-tab="contact">Contact</button>
       </div>
@@ -33,7 +34,7 @@
   </header>
 
   <main class="wrap">
-    <!-- HOME pane -->
+    <!-- HOME pane (videos removed) -->
     <section id="home-pane" class="tab-pane active" aria-labelledby="home">
       <div class="hero-grid">
         <!-- left column: heading + controls -->
@@ -184,7 +185,7 @@
         <div class="feature-card"><img src="https://cdn-icons-png.flaticon.com/512/2922/2922835.png" width="48" alt=""><div style="font-weight:700; margin-top:10px">Distribution & Ads</div><p style="color:var(--muted); margin-top:8px">Paid media creative & optimisation.</p></div>
       </div>
 
-      <div class="container"><h2>Add‑ons</h2>
+      <div class="container"><h2>Add-ons</h2>
 <div class="grid cards-3">
 <div class="card"><h3>Brand Film</h3><p>1–3 min cinematic story for founders, products or events.</p></div>
 <div class="card"><h3>YouTube Edit</h3><p>Long-form edits, captions, chapters, and thumbnails.</p></div>
@@ -192,193 +193,197 @@
 </div></div>
     </section>
 
-    <!-- WORK pane -->
-<section class="section">
-  <div class="container grid portfolio-grid" style="
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 20px;
-    ">
-    <a class="thumb" href="https://www.youtube.com/watch?v=0Lj4ysomn0M" target="_blank" style="
-        height: 220px;
-        background: url('https://img.youtube.com/vi/0Lj4ysomn0M/maxresdefault.jpg')
-          center/cover no-repeat;
-        border-radius: 14px;
-        position: relative;
-        display: flex;
-        align-items: flex-end;
-        padding: 10px;
-        color: white;
-        text-decoration: none;
-        overflow: hidden;
-      ">
-      <div style="
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          background: rgba(0, 0, 0, 0.3);
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        ">
-        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
-      </div>
-      <h4 style="z-index: 1;">On the way | Short Film | Madhu | Ram Sardhar</h4>
-    </a>
+    <!-- PORTFOLIO pane (videos live only here) -->
+    <section id="portfolio-pane" class="tab-pane" aria-labelledby="portfolio">
+      <div class="section">
+        <div class="container grid portfolio-grid" style="
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+          ">
+          <a class="thumb" href="https://www.youtube.com/watch?v=0Lj4ysomn0M" target="_blank" style="
+              height: 220px;
+              background: url('https://img.youtube.com/vi/0Lj4ysomn0M/maxresdefault.jpg')
+                center/cover no-repeat;
+              border-radius: 14px;
+              position: relative;
+              display: flex;
+              align-items: flex-end;
+              padding: 10px;
+              color: white;
+              text-decoration: none;
+              overflow: hidden;
+            ">
+            <div style="
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: rgba(0, 0, 0, 0.3);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              ">
+              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+            </div>
+            <h4 style="z-index: 1;">On the way | Short Film | Madhu | Ram Sardhar</h4>
+          </a>
 
-    <a class="thumb" href="https://www.youtube.com/watch?v=ouDX363DKFg" target="_blank" style="
-        height: 220px;
-        background: url('https://img.youtube.com/vi/ouDX363DKFg/maxresdefault.jpg')
-          center/cover no-repeat;
-        border-radius: 14px;
-        position: relative;
-        display: flex;
-        align-items: flex-end;
-        padding: 10px;
-        color: white;
-        text-decoration: none;
-        overflow: hidden;
-      ">
-      <div style="
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          background: rgba(0, 0, 0, 0.3);
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        ">
-        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
-      </div>
-      <h4 style="z-index: 1;">
-        In the race for trust, Ethika is always in pole position.
-        #DriveWithEthika F1XEthika
-      </h4>
-    </a>
+          <a class="thumb" href="https://www.youtube.com/watch?v=ouDX363DKFg" target="_blank" style="
+              height: 220px;
+              background: url('https://img.youtube.com/vi/ouDX363DKFg/maxresdefault.jpg')
+                center/cover no-repeat;
+              border-radius: 14px;
+              position: relative;
+              display: flex;
+              align-items: flex-end;
+              padding: 10px;
+              color: white;
+              text-decoration: none;
+              overflow: hidden;
+            ">
+            <div style="
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: rgba(0, 0, 0, 0.3);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              ">
+              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+            </div>
+            <h4 style="z-index: 1;">
+              In the race for trust, Ethika is always in pole position.
+              #DriveWithEthika F1XEthika
+            </h4>
+          </a>
 
-    <a class="thumb" href="https://www.youtube.com/watch?v=r8tRxU-wW5s" target="_blank" style="
-        height: 220px;
-        background: url('https://img.youtube.com/vi/r8tRxU-wW5s/maxresdefault.jpg')
-          center/cover no-repeat;
-        border-radius: 14px;
-        position: relative;
-        display: flex;
-        align-items: flex-end;
-        padding: 10px;
-        color: white;
-        text-decoration: none;
-        overflow: hidden;
-      ">
-      <div style="
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          background: rgba(0, 0, 0, 0.3);
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        ">
-        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
-      </div>
-      <h4 style="z-index: 1;">Instant Millet Breakfast | AD film by Ram sardhar</h4>
-    </a>
+          <a class="thumb" href="https://www.youtube.com/watch?v=r8tRxU-wW5s" target="_blank" style="
+              height: 220px;
+              background: url('https://img.youtube.com/vi/r8tRxU-wW5s/maxresdefault.jpg')
+                center/cover no-repeat;
+              border-radius: 14px;
+              position: relative;
+              display: flex;
+              align-items: flex-end;
+              padding: 10px;
+              color: white;
+              text-decoration: none;
+              overflow: hidden;
+            ">
+            <div style="
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: rgba(0, 0, 0, 0.3);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              ">
+              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+            </div>
+            <h4 style="z-index: 1;">Instant Millet Breakfast | AD film by Ram sardhar</h4>
+          </a>
 
-    <a class="thumb" href="https://www.youtube.com/watch?v=NSq2s2-yvFM" target="_blank" style="
-        height: 220px;
-        background: url('https://img.youtube.com/vi/NSq2s2-yvFM/maxresdefault.jpg')
-          center/cover no-repeat;
-        border-radius: 14px;
-        position: relative;
-        display: flex;
-        align-items: flex-end;
-        padding: 10px;
-        color: white;
-        text-decoration: none;
-        overflow: hidden;
-      ">
-      <div style="
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          background: rgba(0, 0, 0, 0.3);
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        ">
-        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
-      </div>
-      <h4 style="z-index: 1;">
-        Employee Wellness Health Camp | SID’s Farm | Hyderabad
-      </h4>
-    </a>
+          <a class="thumb" href="https://www.youtube.com/watch?v=NSq2s2-yvFM" target="_blank" style="
+              height: 220px;
+              background: url('https://img.youtube.com/vi/NSq2s2-yvFM/maxresdefault.jpg')
+                center/cover no-repeat;
+              border-radius: 14px;
+              position: relative;
+              display: flex;
+              align-items: flex-end;
+              padding: 10px;
+              color: white;
+              text-decoration: none;
+              overflow: hidden;
+            ">
+            <div style="
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: rgba(0, 0, 0, 0.3);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              ">
+              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+            </div>
+            <h4 style="z-index: 1;">
+              Employee Wellness Health Camp | SID’s Farm | Hyderabad
+            </h4>
+          </a>
 
-    <a class="thumb" href="https://www.youtube.com/watch?v=p_FVQvhmIzQ" target="_blank" style="
-        height: 220px;
-        background: url('https://img.youtube.com/vi/p_FVQvhmIzQ/maxresdefault.jpg')
-          center/cover no-repeat;
-        border-radius: 14px;
-        position: relative;
-        display: flex;
-        align-items: flex-end;
-        padding: 10px;
-        color: white;
-        text-decoration: none;
-        overflow: hidden;
-      ">
-      <div style="
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          background: rgba(0, 0, 0, 0.3);
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        ">
-        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
-      </div>
-      <h4 style="z-index: 1;">BE IN THE MOMENT | Award winning Shortfilm | By Ram sardhaR</h4>
-    </a>
+          <a class="thumb" href="https://www.youtube.com/watch?v=p_FVQvhmIzQ" target="_blank" style="
+              height: 220px;
+              background: url('https://img.youtube.com/vi/p_FVQvhmIzQ/maxresdefault.jpg')
+                center/cover no-repeat;
+              border-radius: 14px;
+              position: relative;
+              display: flex;
+              align-items: flex-end;
+              padding: 10px;
+              color: white;
+              text-decoration: none;
+              overflow: hidden;
+            ">
+            <div style="
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: rgba(0, 0, 0, 0.3);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              ">
+              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+            </div>
+            <h4 style="z-index: 1;">BE IN THE MOMENT | Award winning Shortfilm | By Ram sardhaR</h4>
+          </a>
 
-    <a class="thumb" href="https://www.youtube.com/watch?v=vP71vc-ZdrI" target="_blank" style="
-        height: 220px;
-        background: url('https://img.youtube.com/vi/vP71vc-ZdrI/maxresdefault.jpg')
-          center/cover no-repeat;
-        border-radius: 14px;
-        position: relative;
-        display: flex;
-        align-items: flex-end;
-        padding: 10px;
-        color: white;
-        text-decoration: none;
-        overflow: hidden;
-      ">
-      <div style="
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          background: rgba(0, 0, 0, 0.3);
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        ">
-        <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+          <a class="thumb" href="https://www.youtube.com/watch?v=vP71vc-ZdrI" target="_blank" style="
+              height: 220px;
+              background: url('https://img.youtube.com/vi/vP71vc-ZdrI/maxresdefault.jpg')
+                center/cover no-repeat;
+              border-radius: 14px;
+              position: relative;
+              display: flex;
+              align-items: flex-end;
+              padding: 10px;
+              color: white;
+              text-decoration: none;
+              overflow: hidden;
+            ">
+            <div style="
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: rgba(0, 0, 0, 0.3);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              ">
+              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
+            </div>
+            <h4 style="z-index: 1;">ANTHILL Official Trailer | Documentary Film | Susheel Agarwal</h4>
+          </a>
+        </div>
       </div>
-      <h4 style="z-index: 1;">ANTHILL Official Trailer | Documentary Film | Susheel Agarwal</h4>
-    </a>
-  </div>
-</section>
+    </section>
+
+    <!-- WORK pane (kept separate — non-video case studies) -->
     <section id="work-pane" class="tab-pane" aria-labelledby="work">
       <div class="center">
         <h3 class="section-heading">Selected Work</h3>
@@ -391,6 +396,7 @@
         <div class="stat-card"><img src="https://via.placeholder.com/600x360?text=Case+3" alt=""><div style="font-weight:700; margin-top:10px">Campaign — Healthy Bites</div><p style="color:var(--muted); margin-top:8px">Integrated campaign focused on conversions.</p></div>
       </div>
     </section>
+
     <!-- ABOUT pane -->
     <section id="about-pane" class="tab-pane" aria-labelledby="about">
       <div class="center">
@@ -404,7 +410,6 @@
         <div class="stat-card"><div style="font-weight:700">Values</div><p style="color:var(--muted); margin-top:8px">Craft, speed, honesty, results.</p></div>
         <div class="stat-card"><div style="font-weight:700">Recognition</div><p style="color:var(--muted); margin-top:8px">Festival wins and client accolades.</p></div>
       </div>
-      
     </section>
 
     <!-- CONTACT pane -->
@@ -447,6 +452,72 @@
     </div>
   </footer>
 
+  <!-- inline script: handles tabs + small behaviors -->
+  <script>
+    // set year
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // tabs
+    const tabButtons = document.querySelectorAll('.tab-btn');
+    const panes = {
+      home: document.getElementById('home-pane'),
+      services: document.getElementById('services-pane'),
+      portfolio: document.getElementById('portfolio-pane'),
+      work: document.getElementById('work-pane'),
+      about: document.getElementById('about-pane'),
+      contact: document.getElementById('contact-pane')
+    };
+
+    function activateTab(name){
+      tabButtons.forEach(b => b.classList.toggle('active', b.dataset.tab === name));
+      Object.keys(panes).forEach(k => {
+        if (!panes[k]) return;
+        panes[k].classList.toggle('active', k === name);
+      });
+      // scroll to top for clarity
+      window.scrollTo({top:0, behavior:'smooth'});
+    }
+
+    tabButtons.forEach(btn => btn.addEventListener('click', () => activateTab(btn.dataset.tab)));
+
+    // footer nav helpers (links)
+    function switchTo(tabName){ activateTab(tabName); }
+
+    // CTA triggers inside page
+    document.querySelectorAll('[data-action="open-contact"]').forEach(el => el.addEventListener('click', () => activateTab('contact')));
+    document.querySelectorAll('[data-action="open-services"]').forEach(el => el.addEventListener('click', () => activateTab('services')));
+
+    // marquee pause on hover (if present)
+    const marqueeWrap = document.getElementById('marqueeWrap');
+    const marqueeTrack = document.getElementById('marqueeTrack');
+    if(marqueeWrap && marqueeTrack){
+      marqueeWrap.addEventListener('mouseenter', () => marqueeTrack.style.animationPlayState = 'paused');
+      marqueeWrap.addEventListener('mouseleave', () => marqueeTrack.style.animationPlayState = 'running');
+    }
+
+    // contact form basic demo
+    const form = document.getElementById('contactForm');
+    if(form){
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
+        const name = document.getElementById('name').value.trim();
+        const email = document.getElementById('email').value.trim();
+        const message = document.getElementById('message').value.trim();
+        if(!name || !email || !message){
+          alert('Please complete all fields.');
+          return;
+        }
+        alert('Thanks, ' + name + '! We received your message and will be in touch.');
+        form.reset();
+        activateTab('home');
+      });
+    }
+
+    // initialize
+    activateTab('home');
+  </script>
+
+  <!-- optional external script (kept for compatibility; safe to keep or remove) -->
   <script src="scripts.js"></script>
 </body>
 </html>
